@startuml


' Interface
interface Ifood {
    -position : Pair<int ,int>

    +Ifood()
    +getPosition() : Pair<int, int> <<pure>>
    +~Ifood() <<virtual>>
}

' Implementations of Ifood
class NormalFood {
    +getPosition() : Pair<int, int>
    +~NormalFood()
}

class SuperFood {
    +getPosition() : Pair<int, int>
    +~SuperFood()
}

Ifood <|.. NormalFood
Ifood <|.. SuperFood

' Core game classes
class Board {
    -grid : vector<vector<int>>
    -side : int

    +Board(size : int)
    +operator[](int index) : vector<CellContent>&
    +getSide() : int
    +initialize() : void
    +render() : void
}

enum CellContent {
    +empty:
    +body:
    +Nfood:
    +Sfood:
    +dropped:
}

class Snake {
    -body : dequeue<Pair<int, int>>
    -direction : int

    +Snake()
    +getTail() : Pair<int, int>
    +getHead() : Pair<int, int>
    +setDirection(direction : int): void
    +getDirection(): void
    +move() : void
    +grow(amount : int) : void
    +score() : int
}

enum Direction {
    +UP:
    +DOWN:
    +RIGHT:
    +LEFT:
}

class GameController {
    -board : Board
    -snake : Snake
    -NfoodCount : int

    +createFood() : Ifood*
    +startGame(difficulty : int, size : int) : void
    +changeDirection(direction : int) : void
    +pauseGame() : void
    +resumeGame() : void
    +restartGame() : void
}

@enduml